--- a/Teste_Events_JS/style.css
+++ b/Teste_Events_JS/style.css
@@ -22,5 +22,19 @@ body{
     background-color:#204c8d;
 }
 .titulo{
-    
+    color:aliceblue;
+    font-family:Verdana, Geneva, Tahoma, sans-serif; 
+    padding-top: 25px;
+    padding-bottom: 0px;
+}
+#Button{
+    max-width:200px;
+    max-height:150px;
+    width: auto;
+    height: auto;
+    padding-top: 5px;
+    cursor: pointer;
+}
+.irock {
+    padding-left: 150px;
 }
