--- a/Teste_Events_JS/style.css
+++ b/Teste_Events_JS/style.css
@@ -4,37 +4,48 @@ header {
     border: 0px;
     margin: 0px;
 }
-#title{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+#title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: white;
     text-align: center;
     font-size: 40px;
 }
-#logo{
+
+#logo {
     align-items: initial;
     float: left;
-    max-width:200px;
-    max-height:150px;
+    max-width: 200px;
+    max-height: 150px;
     width: auto;
     height: auto;
 }
-body{
-    background-color:#204c8d;
+
+body {
+    background-color: #204c8d;
 }
-.titulo{
-    color:aliceblue;
-    font-family:Verdana, Geneva, Tahoma, sans-serif; 
+
+.titulo {
+    color: aliceblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-top: 25px;
     padding-bottom: 0px;
 }
-#Button{
-    max-width:200px;
-    max-height:150px;
+
+#Button {
+    max-width: 200px;
+    max-height: 150px;
     width: auto;
     height: auto;
     padding-top: 5px;
     cursor: pointer;
 }
+
 .irock {
     padding-left: 150px;
+}
+
+.bloco {
+    display: flex;
+    flex-direction: column;
 }
