--- a/Teste_Events_JS/style.css
+++ b/Teste_Events_JS/style.css
@@ -46,6 +46,11 @@ body {
 }
 
 .bloco {
+    box-sizing: content-box;
+    flex-direction: column;
     display: flex;
+}
+
+p {
     flex-direction: column;
 }
