--- a/Teste_Events_JS/style.css
+++ b/Teste_Events_JS/style.css
@@ -28,6 +28,13 @@ h2 {
     padding-bottom: 0px;
 }
 
+h3 {
+    text-align: center;
+    color: antiquewhite;
+    padding-top: 25px;
+    padding-bottom: 0px;
+}
+
 body {
     background-color: #204c8d;
 }
