--- a/Projeto_IRock/style.css
+++ b/Projeto_IRock/style.css
@@ -1,29 +1,29 @@
-body {
-    background-image: url(https://img.freepik.com/fotos-premium/belo-gramado-em-uma-paisagem-natural_28981-926.jpg?w=2000);
-}
-
-header {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
-    text-align: center;
-    font-size: 30px;
-    margin-left: 240px;
-    margin-right: 240px;
-    border-style: dotted;
-    border-radius: 12%;
-}
-
-#main {
-    position: relative;
-    text-align: center;
-    margin-top: 182px;
-}
-
-#logo {
-    align-items: initial;
-    float: left;
-    max-width: 200px;
-    max-height: 150px;
-    width: auto;
-    height: auto;
-}
+    body {
+        background-image: url(https://img.freepik.com/fotos-premium/belo-gramado-em-uma-paisagem-natural_28981-926.jpg?w=2000);
+    }
+    
+    header {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: white;
+        text-align: center;
+        font-size: 30px;
+        margin-left: 240px;
+        margin-right: 240px;
+        border-style: dotted;
+        border-radius: 12%;
+    }
+    
+    #main {
+        text-align: center;
+        margin-top: 182px;
+        position: auto;
+    }
+    
+    #logo {
+        align-items: initial;
+        float: left;
+        max-width: 200px;
+        max-height: 150px;
+        width: auto;
+        height: auto;
+    }
