--- a/Teste_Events_JS/style.css
+++ b/Teste_Events_JS/style.css
@@ -76,7 +76,7 @@
             width: 150px;
         }
         
-        .error {
+        .erro {
             color: red;
             text-align: center;
             font-size: x-large;
