--- a/Decisions_If_Else/style.css
+++ b/Decisions_If_Else/style.css
@@ -1,9 +1,9 @@
 body {
     background-image: url(https://img.freepik.com/fotos-premium/belo-gramado-em-uma-paisagem-natural_28981-926.jpg?w=2000);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
     text-align: center;
     font-size: 30px;
@@ -26,4 +26,28 @@ header {
     max-height: 150px;
     width: auto;
     height: auto;
+}
+
+.buttom {
+    width: auto;
+    height: 98px;
+    cursor: pointer;
+    margin: 5px 5px;
+}
+
+#questionario {
+    box-sizing: border-box;
+    background-color: #c0c0c0;
+    align-items: center;
+    text-align: center;
+    border: 3px solid white;
+    height: 300px;
+    width: auto;
+    margin: auto;
+    border-radius: 20px;
+}
+
+#SessaoPergunta {
+    border-bottom: 3px dotted white;
+    opacity: 100%;
 }
