--- a/Decisions_If_Else/style.css
+++ b/Decisions_If_Else/style.css
@@ -1,4 +1,6 @@
 body {
+    background-size: auto;
+    background-repeat: no-repeat ;
     background-image: url(https://img.freepik.com/fotos-premium/belo-gramado-em-uma-paisagem-natural_28981-926.jpg?w=2000);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -16,7 +18,6 @@ header {
 #main {
     text-align: center;
     margin-top: 182px;
-    position: auto;
 }
 
 #logo {
@@ -55,3 +56,27 @@ header {
 #Pergunta {
     padding: 1cm;
 }
+#iRock{
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    height: 250px;
+    width: auto;
+    margin: auto;
+    position: relative
+
+}
+#placar{
+    
+    height: 200px;
+    width: 400px;
+    box-sizing: border-box;
+    float: right;
+    position:absolute;
+    
+}
+#linhaplacar{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+}
+
