--- a/Cine_Max/style.css
+++ b/Cine_Max/style.css
@@ -3,5 +3,17 @@ body {
 }
 
 header {
+    color: whitesmoke;
+    align-items: center;
     background-color: darkslategrey;
+    text-align: center;
+    text-decoration: aliceblue;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: aqua;
+    font-size: xx-large;
+    box-sizing: content-box;
+    border-radius: 25px;
+    padding: 5px;
+    width: 500px;
+    margin: auto;
 }
